--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,10 @@ markupsafe==2.1.1 ; python_version >= '3.7'
 setuptools==65.6.3 ; python_version >= '3.7'
 werkzeug==2.2.2 ; python_version >= '3.7'
 zipp==3.11.0 ; python_version >= '3.7'
+Flask==2.0.1
+flask-cors==3.0.10
+firebase-admin==5.0.0
+pymongo==3.12.0
+selenium==3.141.0
+webdriver_manager==3.4.2
+gunicorn==20.1.0
