--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,3 @@
--i https://pypi.org/simple
-click==8.1.3 ; python_version >= '3.7'
-flask==2.2.2
-gunicorn==20.1.0
-importlib-metadata==5.1.0 ; python_version < '3.10'
-itsdangerous==2.1.2 ; python_version >= '3.7'
-jinja2==3.1.2 ; python_version >= '3.7'
-markupsafe==2.1.1 ; python_version >= '3.7'
-setuptools==65.6.3 ; python_version >= '3.7'
-werkzeug==2.2.2 ; python_version >= '3.7'
-zipp==3.11.0 ; python_version >= '3.7'
 Flask==2.0.1
 flask-cors==3.0.10
 firebase-admin==5.0.0
@@ -16,3 +5,7 @@ pymongo==3.12.0
 selenium==3.141.0
 webdriver_manager==3.4.2
 gunicorn==20.1.0
+requests==2.26.0
+beautifulsoup4==4.10.0
+openpyxl==3.0.9
+python-dotenv==0.19.1
